# ray-tracer

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: bounds.h  camera.h  canvas.h  config.h  dynamic_array.h  intersections.h  lights.h  materials.h  matrices.h  obj_parser.h  patterns.h  rays.h  scenes.h  sequences.h  shapes.h  transformations.h  tuples.h  world.h
src/: bounds.c  bounds.c.gcov  camera.c  camera.c.gcov  canvas.c  canvas.c.gcov  canvas.h.gcov  intersections.c  intersections.c.gcov  intersections.h.gcov  lights.c  lights.c.gcov  main.c  materials.c  materials.c.gcov  matrices.c  matrices.c.gcov  matrices.h.gcov  obj_parser.c  obj_parser.c.gcov  patterns.c  patterns.c.gcov  rays.h.gcov  sequences.c  sequences.c.gcov  shapes.c  shapes.c.gcov  shapes.h.gcov  transformations.c  transformations.c.gcov  tuples.h.gcov  world.c  world.c.gcov
src/scenes/: scene_checkered.c  scene_cover.c  scene_dragon.c  scene_glass_pawn.c  scene_reflect_refract.c  scene_shadow_glamour.c  scene_sphere_grid.c  scene_table.c  scene_teapot.c
src/shapes/: cone.c  cone.c.gcov  cube.c  cube.c.gcov  cylinder.c  cylinder.c.gcov  group.c  group.c.gcov  intersections.h.gcov  plane.c  plane.c.gcov  sphere.c  (+5 more)
tests/: CMakeLists.txt  test_bounds.c  test_camera.c  test_canvas.c  test_cones.c  test_cubes.c  test_cylinders.c  test_groups.c  test_intersections.c  test_lights.c  test_materials.c  test_matrices.c  test_obj_parser.c  test_patterns.c  test_planes.c  test_rays.c  test_sequences.c  test_spheres.c  test_transformations.c  test_triangles.c  test_tuples.c  test_world.c
